--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -173,11 +173,19 @@
     <string name="pref_summary_notification_vibrateWhen" msgid="669655090822561447">"收到通知时还振动提醒"</string>
     <string name="pref_title_notification_ringtone" msgid="5467265237106229952">"选择铃声"</string>
     <string name="pref_messages_to_save" msgid="3202539743892934926">"设置要保存的信息数量"</string>
-  <string-array name="prefEntries_vibrateWhen">
-    <item msgid="2520871831815631409">"始终"</item>
-    <item msgid="6069709696037750627">"仅在静音时"</item>
-    <item msgid="7486145357487111435">"一律不"</item>
-  </string-array>
+    <!-- Settings item for SMS Split 160 characters setting -->
+    <string name="pref_title_sms_split_160">短信分段</string>
+    <!-- Settings item description for boolean SMS Split 160 characters setting -->
+    <string name="pref_summary_sms_split_160">按每 160 个字符分割消息</string>
+    <!-- Settings item for boolean option for SMS Split Counter -->
+    <string name="pref_title_sms_split_counter">分割编号</string>
+    <!-- Settings item description for boolean SMS Split 160 characters setting -->
+    <string name="pref_summary_sms_split_counter">在分割的消息中加入编号，例如：(1/2)</string>
+    <string-array name="prefEntries_vibrateWhen">
+      <item msgid="2520871831815631409">"始终"</item>
+      <item msgid="6069709696037750627">"仅在静音时"</item>
+      <item msgid="7486145357487111435">"一律不"</item>
+    </string-array>
     <string name="prefDialogTitle_vibrateWhen" msgid="6419655771690242118">"振动"</string>
     <string name="pref_title_mms_auto_retrieval" msgid="4021878285474431355">"自动检索"</string>
     <string name="pref_summary_mms_auto_retrieval" msgid="925163257363757048">"自动检索信息"</string>
@@ -328,4 +336,30 @@
     <item quantity="other" msgid="7338580381574463136">"<xliff:g id="NUMBER">%1$s</xliff:g> 个人"</item>
   </plurals>
     <string name="disable_notifications_dialog_message" msgid="7644011234972074096">"要停止从默认“短信”应用程序接收重复的短信通知吗？"</string>
+    <!-- Sms templates -->
+    <string name="prefs_templates_settings">信息模板</string>
+    <string name="pref_title_templates_manage">模板</string>
+    <string name="pref_summary_templates_manage">管理您的信息模板</string>
+    <string name="pref_title_templates_show_gesture">手势</string>
+    <string name="pref_summary_templates_show_gesture">显示手势轨迹</string>
+    <string name="pref_title_template_gestures_sensitivity">手势灵敏度</string>
+    <string name="template_save">保存</string>
+    <string name="template_insert_hint">在此插入信息模板</string>
+    <string name="template_empty_text">文本栏不能为空</string>
+    <string name="template_explanation">插入或修改模板文本并且可以画一个手势来访问它</string>
+    <string name="template_edit">编辑</string>
+    <string name="template_delete">删除</string>
+    <string name="template_ctx_menu_title">动作</string>
+    <string name="template_list_title">模板</string>
+    <string name="template_edit_title">编辑模板</string>
+    <string name="template_new_title">新建模板</string>
+    <string name="template_insert">插入模板</string>
+    <string name="template_insert_ctx_menu_title">编辑文本</string>
+    <string name="template_gesture_draw">在下面的空白处画一个手势</string>
+    <string name="template_not_present_error">您没有定义任何模板</string>
+    <string name="template_not_present_error_title">错误</string>
+    <string name="template_select">选择一个模板</string>
+    <string name="template_cancel_confirm_title">警告</string>
+    <string name="template_cancel_confirm_text">您真的要取消吗？</string>
+    <string name="gestures_already_present">警告：一个相似的手势会访问另一个模板！</string>
 </resources>
